[package]
name = "nyar-collection"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "GC friendly functional data structure, like RBB & HAMT"
repository = "https://github.com/oovm/nyar-collection/tree/dev/projects/nyar-collection"
documentation = "https://docs.rs/nyar-collection"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
im = "15.1.0"
serde = { version = "1.0.188", optional = true, features = ["derive"]}
shredder = "0.2.0"

[dev-dependencies]

[features]
serde = ["dep:serde"]
default = []
